[MODORDERS-972] - code smells fix